assets/css/section-block_projects.css
/* ... */
          @media (max-width: 991px) {
            .block-projects .block-projects__wrapper--text-below .block-projects__description::before {
              display: none; } }
  .block-projects .block-projects__media {
    grid-column: span 8;
    height: 100%;
    padding-bottom: 74px; }
    @media (max-width: 1199px) {
      .block-projects .block-projects__media {
        grid-column: span 7; } }
    @media (max-width: 991px) {
      .block-projects .block-projects__media {
        width: 100%;
        padding: 0; } }
  .block-projects .block-projects__description {
    grid-column: span 4;
    height: 100%;
    padding-bottom: 74px; }
    @media (max-width: 1199px) {
      .block-projects .block-projects__description {
        grid-column: span 5;
        height: -webkit-max-content;
        height: -moz-max-content;
        height: max-content; } }
    @media (max-width: 991px) {
      .block-projects .block-projects__description {
        width: 100%;
        padding: 0; } }
  .block-projects .block-projects__col--text {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    position: relative;
    margin: 0;
    padding-top: 78px;
    padding-right: 70px; }
    @media (max-width: 1199px) {
      .block-projects .block-projects__col--text {
        padding-right: 2rem;
        padding-top: 3rem; } }
    @media (max-width: 991px) {
      .block-projects .block-projects__col--text {
        padding: 0 !important;
        height: auto; } }
  .block-projects .block-projects__col--image {
    -webkit-box-flex: 1;
    -ms-flex: 1 1 100%;
    flex: 1 1 100%;
    max-width: 100%;
    overflow: hidden;
    height: 100%; }
  .block-projects .title--h4 {
    font-family: "PoppinsSBold", "Roboto", "Arial", sans-serif;
    font-style: normal;
    font-size: 32px;
    line-height: 1.375;
    font-weight: 600; }
    @media (max-width: 991px) {
      .block-projects .title--h4 {
        font-size: 18px;
        line-height: 26px; } }
  .block-projects .block-projects__slide-image {
    position: relative; }
    .block-projects .block-projects__slide-image::after {
      content: "";
      position: absolute;
      inset: 0;
      pointer-events: none;
      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200' preserveAspectRatio='none'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.75' numOctaves='3' result='noise'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0'/%3E%3C/filter%3E%3Crect width='200' height='200' filter='url(%23noise)' opacity='0.15'/%3E%3C/svg%3E");
      background-size: cover, 200px 200px;
      background-repeat: no-repeat, repeat; }
    .block-projects .block-projects__slide-image img {
      width: 100%;
      height: auto;
      max-height: 600px;
      min-height: 100%;
      display: block;
      -o-object-fit: cover;
      object-fit: cover; }
  .block-projects .js-projects-text-slider {
    overflow: visible; }
  .block-projects .projects-navigation {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    gap: 20px; }
    @media (max-width: 991px) {
      .block-projects .projects-navigation {
        gap: 14px; } }
  .block-projects .swiper-container {
    height: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch; }
  .block-projects .swiper-wrapper {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: flex-start;
    height: 100%;
    gap: 0;
    margin-left: 1px; }
  .block-projects .swiper-slide {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: flex-start;
    gap: 30px;
    height: 100%; }
    @media (max-width: 991px) {
      .block-projects .swiper-slide {
        gap: 1.5rem; } }
  .block-projects .swiper-button-prev,
  .block-projects .swiper-button-next {
    position: static;
    margin: 0;
    background: var(--color-white, #fff);
    border: none;
    border-radius: 50%;
    padding: 10px;
    width: 44px;
    height: 44px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    transition: background 0.3s ease; }
    @media (max-width: 991px) {
      .block-projects .swiper-button-prev,
      .block-projects .swiper-button-next {
        min-width: 36px !important;
        width: 36px;
        height: 36px;
        padding: 10px; } }
    .block-projects .swiper-button-prev svg,
    .block-projects .swiper-button-next svg {
      display: block; }
      .block-projects .swiper-button-prev svg .icon-arrow,
      .block-projects .swiper-button-next svg .icon-arrow {
        fill: var(--color-black); }
/* ... */

